welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
if (!estFaceMur){
^Balin:25: error: ';' expected but 'else' found.
}else{
 ^