welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (!estFaceMur){


droite();
droite();




	while(estSurBiscuit==false ){
	avance();
	}




	while(estFaceMur==false){
	droite();droite();
	prendBiscuit();
	avance();avance();avance();avance();avance();
	poseBiscuit();
	droite();droite();
	avance();avance();avance();avance();avance();avance();
}else{

		droite();
		avance();
		gauche();
		avance();
	

}


